--- a/css/styles.css
+++ b/css/styles.css
@@ -343,7 +343,7 @@ body {
   font-weight: 400;
   font-size: 1.6rem;
   font-family: "Aleo", sans-serif;
-  line-height: 1.8;
+  line-height: 1.9;
   letter-spacing: 1px;
   text-align: center;
   -webkit-transition: all .4s linear;
@@ -447,7 +447,22 @@ body {
     display: inline-block;
     -webkit-transition: all .4s linear;
     -o-transition: all .4s linear;
-    transition: all .4s linear; }
+    transition: all .4s linear;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    -ms-flex-wrap: nowrap;
+    flex-wrap: nowrap;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+    -webkit-box-pack: justify;
+    -ms-flex-pack: justify;
+    justify-content: space-between; }
     .header__scroll:hover, .header__scroll:focus, .header__scroll:active {
       -webkit-transform: scale(1.2);
       -ms-transform: scale(1.2);
@@ -571,7 +586,7 @@ body {
     font-family: "Aleo", sans-serif;
     font-size: 1.4rem;
     height: 55px;
-    line-height: 55px;
+    line-height: 51px;
     width: 30%;
     outline: none;
     border: none;
@@ -744,7 +759,8 @@ body {
     -webkit-box-align: stretch;
     -ms-flex-align: stretch;
     align-items: stretch;
-    margin-top: 70px; }
+    margin-top: 70px;
+    background-color: #333; }
   .review__img-wrap {
     display: block;
     width: 40%; }
